fixed the navbar on small screens

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -38,7 +38,6 @@
     inset: 0 0 0 12rem;
     background-color: var(--clr-neutral-100);
     z-index: 9;
-
     flex-direction: column;
   }
 
@@ -47,6 +46,6 @@
   }
 
   .show {
-    transform: translateX(0);
+    transform: translateX(-15%);
   }
 }
